<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">i starve</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_tools">Ferramentas</string>
    <string name="menu_cart">Meu Carrinho</string>
    <string name="menu_historic">Meus históricos</string>
    <string name="menu_story">Loja</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_telefone">Telefone</string>


    <string name="text_registrar">Cadastrar</string>

</resources>
