<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_story"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_story" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_container_cart"
            android:icon="@drawable/ic_menu_shopping_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_historic"
            android:icon="@drawable/ic_menu_shopping_cart"
            android:title="@string/menu_historic" />

    </group>

    <!-- <item android:title="Communicate">
         <menu>

         </menu>
     </item>-->

</menu>
