<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pndtech.com.istarve.view.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_story"
        android:name="pndtech.com.istarve.view.story.StoryFragment"
        android:label="@string/menu_story"
        tools:layout="@layout/fragment_story" />
    <fragment
        android:id="@+id/nav_container_cart"
        android:name="pndtech.com.istarve.view.cartContainer.CartContainerFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_container_cart" />
    <fragment
        android:id="@+id/nav_historic"
        android:name="pndtech.com.istarve.view.historic.HistoricFragment"
        android:label="@string/menu_historic"
        tools:layout="@layout/fragment_historic" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="pndtech.com.istarve.view.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />


</navigation>